@@ -16,6 +16,7 @@ EXTRA_DIST = makefile.msc \
 	inet.h \
 	make-te.c \
 	modes.h \
+	msproxy.h \
 	network.h \
 	notify.h \
 	outbound.h \
@@ -43,7 +44,7 @@ ssl_c = ssl.c
 endif
 
 libxchatcommon_a_SOURCES = cfgfiles.c ctcp.c dcc.c history.c ignore.c \
-	inbound.c modes.c network.c notify.c outbound.c \
+	inbound.c modes.c msproxy.c network.c notify.c outbound.c \
 	plugin.c plugin-timer.c proto-irc.c server.c servlist.c $(ssl_c) \
 	text.c tree.c url.c userlist.c util.c xchat.c
 
