@@ -142,6 +142,46 @@ net_sockets (int *sok4, int *sok6)
 	net_set_socket_options (*sok4);
 }
 
+void
+udp_sockets (int *sok4, int *sok6)
+{
+	*sok4 = socket (AF_INET, SOCK_DGRAM, 0);
+	*sok6 = -1;
+}
+
+void
+net_store_fill_any (netstore *ns)
+{
+	ns->addr.sin_family = AF_INET;
+	ns->addr.sin_addr.s_addr = INADDR_ANY;
+	ns->addr.sin_port = 0;
+}
+
+void
+net_store_fill_v4 (netstore *ns, guint32 addr, int port)
+{
+	ns->addr.sin_family = AF_INET;
+	ns->addr.sin_addr.s_addr = addr;
+	ns->addr.sin_port = port;
+}
+
+guint32
+net_getsockaddr_v4 (netstore *ns)
+{
+	return ns->addr.sin_addr.s_addr;
+}
+
+int
+net_getsockport (int sok4, int sok6)
+{
+	struct sockaddr_in addr;
+	int len = sizeof (addr);
+
+	if (getsockname (sok4, (struct sockaddr *)&addr, &len) == -1)
+		return -1;
+	return addr.sin_port;
+}
+
 #else
 
 /* =================== IPV6 ================== */
@@ -248,6 +288,96 @@ net_sockets (int *sok4, int *sok6)
 	*sok6 = socket (AF_INET6, SOCK_STREAM, IPPROTO_TCP);
 	net_set_socket_options (*sok4);
 	net_set_socket_options (*sok6);
+}
+
+void
+udp_sockets (int *sok4, int *sok6)
+{
+	*sok4 = socket (AF_INET, SOCK_DGRAM, IPPROTO_UDP);
+	*sok6 = socket (AF_INET6, SOCK_DGRAM, IPPROTO_UDP);
+}
+
+/* the following functions are used only by MSPROXY and are not
+   proper ipv6 implementations - do not use in new code! */
+
+void
+net_store_fill_any (netstore *ns)
+{
+	struct addrinfo *ai;
+	struct sockaddr_in *sin;
+
+	ai = ns->ip6_hostent;
+	if (!ai) {
+		ai = malloc (sizeof (struct addrinfo));
+		memset (ai, 0, sizeof (struct addrinfo));
+		ns->ip6_hostent = ai;
+	}
+	sin = (struct sockaddr_in *)ai->ai_addr;
+	if (!sin) {
+		sin = malloc (sizeof (struct sockaddr_in));
+		memset (sin, 0, sizeof (struct sockaddr_in));
+		ai->ai_addr = (struct sockaddr *)sin;
+	}
+	ai->ai_family = AF_INET;
+	ai->ai_addrlen = sizeof(struct sockaddr_in);
+	sin->sin_family = AF_INET;
+	sin->sin_addr.s_addr = INADDR_ANY;
+	sin->sin_port = 0;
+	ai->ai_next = NULL;
+}
+
+void
+net_store_fill_v4 (netstore *ns, guint32 addr, int port)
+{
+	struct addrinfo *ai;
+	struct sockaddr_in *sin;
+
+	ai = ns->ip6_hostent;
+	if (!ai) {
+		ai = malloc (sizeof (struct addrinfo));
+		memset (ai, 0, sizeof (struct addrinfo));
+		ns->ip6_hostent = ai;
+	}
+	sin = (struct sockaddr_in *)ai->ai_addr;
+	if (!sin) {
+		sin = malloc (sizeof (struct sockaddr_in));
+		memset (sin, 0, sizeof (struct sockaddr_in));
+		ai->ai_addr = (struct sockaddr *)sin;
+	}
+	ai->ai_family = AF_INET;
+	ai->ai_addrlen = sizeof(struct sockaddr_in);
+	sin->sin_family = AF_INET;
+	sin->sin_addr.s_addr = addr;
+	sin->sin_port = port;
+	ai->ai_next = NULL;
+}
+
+guint32
+net_getsockaddr_v4 (netstore *ns)
+{
+	struct addrinfo *ai;
+	struct sockaddr_in *sin;
+
+	ai = ns->ip6_hostent;
+
+	while (ai->ai_family != AF_INET) {
+		ai = ai->ai_next;
+		if (!ai)
+			return 0;
+	}
+	sin = (struct sockaddr_in *)ai->ai_addr;
+	return sin->sin_addr.s_addr;
+}
+
+int
+net_getsockport (int sok4, int sok6)
+{
+	struct sockaddr_in addr;
+	int len = sizeof (addr);
+
+	if (getsockname (sok4, (struct sockaddr *)&addr, &len) == -1)
+		return -1;
+	return addr.sin_port;
 }
 
 #endif
