@@ -22,6 +22,9 @@ Where "NUMBER" is the bug number.
  - Improved the error reporting when connecting through a Socks proxy.
  - DCC file transfers via http/socks45/wingate proxy is now supported
    (Damjan Jovanovic & me).
+ - Fixed Socks 5 failing on 64-bit CPUs.
+ - Added support for connecting through a Microsoft ISA Proxy, requires
+   libntlm at build time (Pavel Fedin).
  - You can now mark and copy timestamps if you hold down SHIFT.
  - 
  - 
